<resources>
    <string name="app_name">Age widget</string>
    <string name="welcome_text">welcome to age widget</string>
    <string name="not_registered_desc">please insert your birthday so we can calculate your exact age 🙂</string>
    <string name="add_widget_help">On a Home screen, touch and hold an empty space.\nTap Widgets.\nTouch and hold a widget...</string>
    <string name="thats_my_birthdaay">thats my birthday! 😍</string>
    <string name="selected_date">selected date:</string>
    <string name="oops_wrong_date">oops wrong date 😬</string>
    <string name="please_enter_your_beautiful_name_here">please enter your beautiful name here:</string>
    <string name="let_s_go_baby">let\'s go baby 😎</string>
    <string name="welcome_to_age_widget">welcome to age widget</string>
    <string name="this_is_your_exact_age_nyou_are_getting_closer_to_the_day_n_nyou_can_add_widget_to_your_home_screen_to_see_this_everytime_you_pick_up_your_phone_or_you_can_uninstall_it_you_lazy_potato">this is your exact age\nyou are getting closer to the day that you die...😂😂 \n\nyou can add widget to your home screen to see this everytime you pick up your phone 😍 or you can uninstall you lazy potato 😒</string>
    <string name="ok_fine">ok fine👍👍</string>
    <string name="widget_created">widget created!!! 😍😍</string>
</resources>