<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.shamlou.agewidget.ui.ViewModelMain" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        welcomeViewAnimations="@{viewModel.mainPageStates}"
        android:background="@color/background_colors">

        <TextView
            android:id="@+id/text_view_not_registered_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/welcome_to_age_widget"
            android:textColor="@color/steel_700"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_not_registered_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/not_registered_desc"
            android:textColor="@color/steel_700"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_not_registered_welcome" />

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxDate="12/31/2010"
            android:minDate="01/01/1990"
            app:calenderViewAnimations="@{viewModel.mainPageStates}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_not_registered_desc" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            tool:alpha="1"
            app:dateLayoutViewAnimations="@{viewModel.mainPageStates}"
            app:layout_constraintTop_toBottomOf="@+id/calendar_view"
            android:id="@+id/layout_not_registered_bottom_part"
            >

            <TextView
                android:id="@+id/text_view_clicked_date_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="36dp"
                android:gravity="center"
                android:text="@string/selected_date"
                android:textColor="@color/steel_700"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/text_view_clicked_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:gravity="center"
                android:text="@{viewModel.selectedBirthDate.birthDateFormated}"
                android:textColor="@color/steel_700"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_clicked_date_desc" />

            <Button
                app:confirmDateViewAnimations="@{viewModel.mainPageStates}"
                android:onClick="@{() -> viewModel.dateConfirmed()}"
                android:id="@+id/button_thats_my_birthday"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/buttons_colors"
                android:text="@string/thats_my_birthdaay"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_clicked_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_view_clicked_date_desc" />

            <Button
                android:onClick="@{() -> viewModel.deleteSelectedDate()}"
                app:wrongDateButtonViewAnimations="@{viewModel.mainPageStates}"
                android:id="@+id/button_wrong_date"
                android:text="@string/oops_wrong_date"
                android:alpha="0"
                android:backgroundTint="@color/buttons_colors"
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_clicked_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_view_clicked_date_desc"/>

            <TextView
                android:id="@+id/text_view_enter_your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/please_enter_your_beautiful_name_here"
                android:textColor="@color/steel_700"
                android:textSize="14dp"
                app:enterNameViewAnimations="@{viewModel.mainPageStates}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_clicked_date"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_enter_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:fontFamily="@font/robotobold"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:text="@={viewModel.enteredName}"
                app:enterNameViewAnimations="@{viewModel.mainPageStates}"
                android:paddingStart="15dp"
                android:hint="your name here"
                android:textColor="@color/steel_700"
                android:textSize="18dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_enter_your_name"
                app:layout_constraintEnd_toStartOf="@+id/lets_go"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:onClick="@{() -> viewModel.letsGoButtonClicked()}"
                app:letsGoViewAnimations="@{viewModel.mainPageStates}"
                android:id="@+id/lets_go"
                android:text="@string/let_s_go_baby"
                android:backgroundTint="@color/buttons_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@+id/edit_text_enter_name"
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_enter_name"
                app:layout_constraintStart_toEndOf="@+id/edit_text_enter_name"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>